#7651 closed bug (fixed)
Logitech precision gamepad doesn't work
Reported by: | modeenf | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Drivers/Input/HID/USB | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
I have the Gamepad working in windows7, snes9x. I also thought that it was broken but it works in windows 7. As you can see the Gamepad is found but what's not working are the buttons and pad. It's like no information are received. But I was as recently as yesterday playing with it in windows.
More information are in #7354.
Attachments (7)
Change History (21)
by , 12 years ago
Attachment: | usb_hid_report_descriptor_046d_c21a_0.bin added |
---|
comment:1 by , 12 years ago
Description: | modified (diff) |
---|---|
Summary: | Logitech precision gamepad don't work → Logitech precision gamepad doesn't work |
To be a bit more specific: comment 24 in #7354 is the relevant info. In short, the device is polled at a higher rate than it specifies (1ms instead of 10ms) due to us polling low/fullspeed devices in every frame (due to missing support of frame span traversal nodes FSTNs in EHCI).
From the listusb output the device was attached to a USB hub. Does the behaviour change if you plug it into a root port directly? Can you also provide a listdev for that machine? Also, if the above assumptions are correct, this should work under UHCI/OHCI. So if you have a machine available that has actual UHCI/OHCI controllers and plug it into a root port then it should work.
follow-up: 3 comment:2 by , 12 years ago
I will check when I get home :)
The device is direct attached to the USB (same port as my wingman, by switching device) on the left side of my laptop. I couldn't boot/use the USB on the right side but I will test all of the USB ports and provide you with a listdev :)
comment:3 by , 12 years ago
Replying to modeenf:
... I couldn't boot/use the USB on the right side ...
Which you've reported in another ticket, right?
but I will test all of the USB ports and provide you with a listdev :)
You're on a system without companion host controllers. To support low/fullspeed devices it just internally has a hub with transaction translators, so you won't be able to get around that. You can still try another machine though, as it'd really be helpful to know if the problem is actually related to this at all.
by , 12 years ago
Attachment: | usb_hid_report_descriptor_046d_c21a_0.2.bin added |
---|
From my aspire one l110
comment:4 by , 11 years ago
Did you ever get your controller to work? My Logitech Wireless RumblePad2 has been working since hrev41851.
comment:5 by , 11 years ago
It didn't work then but it's time to test again :)
I belive it's something with this type of controller, timing if I remember correct.
follow-up: 8 comment:7 by , 9 years ago
@Modeen:
Did you ever get your gamepad working correctly? Is this ticket still valid?
comment:8 by , 9 years ago
Replying to Disreali:
@Modeen:
Did you ever get your gamepad working correctly? Is this ticket still valid?
Valid? If the device are not working it chould deserv a ticket?
I will do Another test run with it. Have a new Haiku developer laptop to test it on :)
comment:9 by , 9 years ago
I have the same gamepad, and it's still not working. The device is recognized and the report is parsed properly (the stickit test app shows the 2 axis and 10 buttons), but we never get the status reports from the pad.
I have tried adding an HID set_idle in the quirk init for this gamepad, as I noticed windows does that, but it didn't help. Even worse, the device stalls the set_idle request. Maybe I did something wrong or the init isn't the right place to do that.
comment:10 by , 8 years ago
Milestone: | R1 → Unscheduled |
---|
Moving out of R1 milestone (FutureHaiku/Features).
comment:11 by , 4 years ago
Component: | Drivers/USB → Drivers/Input/USB-HID |
---|---|
Keywords: | usb_hid removed |
Owner: | changed from | to
comment:14 by , 3 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
same as before